# hn-cli

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
src/hn_cli/: __init__.py  api.py  cli.py  client.py  errors.py  models.py  parsing.py  render.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_errors.py  test_live.py  test_models.py  test_parsing.py  test_render.py  test_truncate.py
tests/fixtures/algolia/: items_42.json  items_ask_hn.json  search_rust.json
tests/fixtures/firebase/: item_42.json  item_self_post.json  topstories.json
