[project]
name = "hn-cli"
version = "0.1.0"
description = "Read-only Hacker News CLI and library, agent-friendly."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ricardo Avila" }]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
]

[project.scripts]
hn = "hn_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hn_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic pattern is `arg: T = typer.Option(...)`, which trips B008.
"src/hn_cli/cli.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that hit the real HN APIs (skipped by default; opt in via -m live)",
]
addopts = "-m 'not live'"
testpaths = ["tests"]
